# compiladores

./: .gitignore  CMakeLists.txt  Lab4-part2.cpp  Lab4-test.cpp  Lab4.cpp  Lab7.cpp  Labo1-sol.cpp  a.out  calc  lab4  lab5.cpp  lab7  lab7_final.cpp  lab7m.cpp  lab8  lab8.cpp
Lab13/: exp.cpp  exp.h  input1.txt  input2.txt  parser.cpp  parser.h  scanner.cpp  token.cpp  token.h  visitor.cpp  visitor.h
Lab14/: CMakeLists.txt  environment.h  exp.cpp  exp.h  main.cpp  parser.cpp  parser.h  scanner.cpp  solucion1.txt  solucion2.txt  solucion3.txt  token.cpp  visitor.cpp  visitor.h
Lab15solparcial/: CMakeLists.txt  arglist.h  exp.cpp  exp.h  main.cpp  parser.cpp  parser.h  scanner.cpp  solucion4.txt  token.cpp  token.h  visitor.cpp  visitor.h
Lab15solparcial/inputs/: input1.txt
Lab9/: exp.cpp  exp.h  input1.txt  input2.txt  main.cpp  parser.cpp  parser.h  token.h  visitor.cpp  visitor.h
lab10/: exp.cpp  exp.h  main.cpp  mainfile.cpp  parser.cpp  parser.h  program  scanner.cpp  token.cpp  token.h  visitor.cpp  visitor.h
lab10/inputs/: input3.txt  input4.txt
lab10/respuestas/: respuesta1.txt  respuesta2.txt  respuesta3.txt  respuesta4.txt
